Stash progress, Refactor Database Design and service classes
